# apps-hackathon-project-adk

./: .gitignore  AGENTS.md  GEMINI.md  README.md  deploy.md  index.html  instructions.md
.specify/: feature.json  init-options.json  integration.json
assets/: index-BArqZKgD.css  index-BB9_GJou.js  index-BHNyJqZ7.js  index-BMHr3kMf.js  index-CMnbxIk1.js  index-CfQ3Egtt.js  index-DIvp7s0b.js  index-DzJOtD2b.js  index-Xw2mKbb_.css  vendor-3jxlwC9y.js  vendor-5oqQbeZh.js  vendor-B9B3kjO4.js  vendor-BC9T-lIp.js  vendor-BFl5S_Yi.js  vendor-BQd6BWbN.js  vendor-BSb8syh5.js  vendor-Bmvh4xa4.js  vendor-CBn-HQf-.js  vendor-CGW9F601.js  vendor-CMAkXWJ3.js  vendor-CsiWNkO9.js  vendor-DDEs1_zi.js  vendor-DL4SIvuv.js  vendor-DezXrFDF.js  vendor-Dh7oAFJi.js  vendor-JLNCNiEl.js  vendor-K508Duei.js  vendor-KzreBKQd.js  vendor-NzauUcTm.js  (+4 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  deploy-cloud-run.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  evaluator.py  interviewer.py  primary.py  researcher.py  supporter.py  tool_loop.py
backend/app/api/: __init__.py  chat.py  main.py  routes.py
backend/app/core/: __init__.py  auth.py  config.py  errors.py  firestore.py  logging.py  rate_limiter.py
backend/app/mcp/: __init__.py  drive_client.py  markdown_generator.py  sqlite_client.py
backend/app/models/: __init__.py  entities.py  schemas.py
backend/app/services/: decision_service.py  markdown_service.py  report_service.py  voucher_service.py
backend/tests/: test_multi_user_isolation.py  test_rate_limiting.py
(+105 files in other folders)
